Set correct z-index for footer

--- a/html/static/style.css
+++ b/html/static/style.css
@@ -56,6 +56,7 @@ footer {
     background-color: #b3b3b3;
     align-self: center;
     align-items: center;
+    z-index: 6;
 }
 
 #footer-left {
